[package]
name = "jlud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"

[dependencies]
aes-gcm = { version = "0.10.3", features = ["std"] }
clap = { version = "4.5.4", features = ["derive"] }
dirs = "5.0.1"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
hostname = "0.4.0"
md5 = "0.7.0"
pnet = "0.34.0"
rand = "0.8.5"
rpassword = "7.3.1"
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8.12"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
