[package]
name = "cygnus"
version = "0.2.0"
edition = "2021"

[dependencies]
aes-gcm = { version = "0.10.3", features = ["std"] }
clap = { version = "4.5.20", features = ["derive"] }
hostname = "0.4.0"
md5 = "0.7.0"
rand = "0.8.5"
thiserror = "1.0.64"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
